--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
     "multiple-select": "^1.5.2",
     "persianjs": "^0.4.0",
     "popper": "^1.0.1",
+    "snowboy": "^1.3.1-alpha.1",
+    "sonus": "^1.0.3",
     "webcamjs": "^1.0.26"
   }
 }
