--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   ],
   "scripts": {
     "start": "electron .",
-    "build": "npm run build-mac && npm run build-win && npm run build-linux",
+    "build": "npm run build-mac && npm run build-win32 && npm run build-win64 && npm run build-linux",
     "build-mac": "electron-packager . --platform=darwin --out=build --icons=icons/Icon.icns --asar --overwrite",
-    "build-win": "electron-packager . --platform=win32 --out=build --icons=icons/Icon.ico --asar --overwrite",
+    "build-win32": "electron-packager . --platform=win32 --arch=ia32 --out=build --icons=icons/Icon.ico --asar --overwrite",
+    "build-win64": "electron-packager . --platform=win32 --arch=x64 --out=build --icons=icons/Icon.ico --asar --overwrite",
     "build-linux": "electron-packager . --platform=linux --out=build --icons=icons/Icon.png --asar --overwrite",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -51,28 +52,41 @@
     }
   },
   "devDependencies": {
-    "electron": "^1.6.10",
-    "electron-packager": "^12.2.0",
+    "devtron": "^1.4.0",
+    "electron": "^11.1.1",
+    "electron-packager": "^15.1.0",
     "electron-prebuilt": "^1.4.13"
   },
   "dependencies": {
+    "alertifyjs": "^1.13.1",
     "annyang": "^2.6.1",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.5.3",
+    "bootstrap-v4-rtl": "^4.5.2-1",
     "canvas": "^2.6.1",
     "domify": "^1.4.0",
     "electron-canvas-to-buffer": "^2.0.0",
+    "electron-localshortcut": "^3.2.1",
+    "electron-pdf-browser-window": "^1.0.12",
+    "electron-pdf-window": "^1.0.12",
+    "electron-reload": "^1.5.0",
+    "file-type": "^16.2.0",
+    "fs-extra": "^9.0.1",
     "html2pdf.js": "^0.9.2",
-    "jquery": "^3.4.1",
+    "jalali-moment": "^3.3.8",
+    "jquery": "^3.5.1",
     "jquery-ui": "^1.12.1",
-    "js-logger": "^1.6.0",
+    "js-logger": "^1.6.1",
     "jspdf": "^1.5.3",
-    "jspdf-autotable": "^3.2.13",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.20",
+    "md.bootstrappersiandatetimepicker": "^3.9.2",
     "multiple-select": "^1.5.2",
     "persianjs": "^0.4.0",
     "popper": "^1.0.1",
-    "snowboy": "^1.3.1-alpha.1",
-    "sonus": "^1.0.3",
-    "webcamjs": "^1.0.26"
+    "popper.js": "^1.14.4",
+    "print-html-element": "^0.5.1",
+    "print-js": "^1.5.0",
+    "toastr": "^2.1.4",
+    "usb-detection": "^4.10.0",
+    "video-snapshot": "^1.0.11"
   }
 }
