--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "electron-screen-recorder",
+  "name": "colonoscopy-report-system",
   "description": "Screen Recorder",
   "version": "0.0.3",
   "author": "Ali Keshvari",
@@ -65,6 +65,7 @@
     "canvas": "^2.6.1",
     "domify": "^1.4.0",
     "electron-canvas-to-buffer": "^2.0.0",
+    "electron-context-menu": "^2.5.0",
     "electron-localshortcut": "^3.2.1",
     "electron-pdf-browser-window": "^1.0.12",
     "electron-pdf-window": "^1.0.12",
